@@ -13,50 +13,50 @@
  * compile with -DZ_PREFIX. The "standard" zlib should be compiled without it.
  */
 #ifdef Z_PREFIX
-#  define deflateInit_          z_deflateInit_
-#  define deflate               z_deflate
-#  define deflateEnd            z_deflateEnd
-#  define inflateInit_          z_inflateInit_
-#  define inflate               z_inflate
-#  define inflateEnd            z_inflateEnd
-#  define deflateInit2_         z_deflateInit2_
-#  define deflateSetDictionary  z_deflateSetDictionary
-#  define deflateCopy           z_deflateCopy
-#  define deflateReset          z_deflateReset
-#  define deflateParams         z_deflateParams
-#  define deflateBound          z_deflateBound
-#  define deflatePrime          z_deflatePrime
-#  define inflateInit2_         z_inflateInit2_
-#  define inflateSetDictionary  z_inflateSetDictionary
-#  define inflateSync           z_inflateSync
-#  define inflateSyncPoint      z_inflateSyncPoint
-#  define inflateCopy           z_inflateCopy
-#  define inflateReset          z_inflateReset
-#  define inflateBack           z_inflateBack
-#  define inflateBackEnd        z_inflateBackEnd
-#  define compress              z_compress
-#  define compress2             z_compress2
-#  define compressBound         z_compressBound
-#  define uncompress            z_uncompress
-#  define adler32               z_adler32
-#  define crc32                 z_crc32
-#  define get_crc_table         z_get_crc_table
-#  define zError                z_zError
+#  define deflateInit_          jkbotti_deflateInit_
+#  define deflate               jkbotti_deflate
+#  define deflateEnd            jkbotti_deflateEnd
+#  define inflateInit_          jkbotti_inflateInit_
+#  define inflate               jkbotti_inflate
+#  define inflateEnd            jkbotti_inflateEnd
+#  define deflateInit2_         jkbotti_deflateInit2_
+#  define deflateSetDictionary  jkbotti_deflateSetDictionary
+#  define deflateCopy           jkbotti_deflateCopy
+#  define deflateReset          jkbotti_deflateReset
+#  define deflateParams         jkbotti_deflateParams
+#  define deflateBound          jkbotti_deflateBound
+#  define deflatePrime          jkbotti_deflatePrime
+#  define inflateInit2_         jkbotti_inflateInit2_
+#  define inflateSetDictionary  jkbotti_inflateSetDictionary
+#  define inflateSync           jkbotti_inflateSync
+#  define inflateSyncPoint      jkbotti_inflateSyncPoint
+#  define inflateCopy           jkbotti_inflateCopy
+#  define inflateReset          jkbotti_inflateReset
+#  define inflateBack           jkbotti_inflateBack
+#  define inflateBackEnd        jkbotti_inflateBackEnd
+#  define compress              jkbotti_compress
+#  define compress2             jkbotti_compress2
+#  define compressBound         jkbotti_compressBound
+#  define uncompress            jkbotti_uncompress
+#  define adler32               jkbotti_adler32
+#  define crc32                 jkbotti_crc32
+#  define get_crc_table         jkbotti_get_crc_table
+#  define zError                jkbotti_zError
 
-#  define alloc_func            z_alloc_func
-#  define free_func             z_free_func
-#  define in_func               z_in_func
-#  define out_func              z_out_func
-#  define Byte                  z_Byte
-#  define uInt                  z_uInt
-#  define uLong                 z_uLong
-#  define Bytef                 z_Bytef
-#  define charf                 z_charf
-#  define intf                  z_intf
-#  define uIntf                 z_uIntf
-#  define uLongf                z_uLongf
-#  define voidpf                z_voidpf
-#  define voidp                 z_voidp
+#  define alloc_func            jkbotti_alloc_func
+#  define free_func             jkbotti_free_func
+#  define in_func               jkbotti_in_func
+#  define out_func              jkbotti_out_func
+#  define Byte                  jkbotti_Byte
+#  define uInt                  jkbotti_uInt
+#  define uLong                 jkbotti_uLong
+#  define Bytef                 jkbotti_Bytef
+#  define charf                 jkbotti_charf
+#  define intf                  jkbotti_intf
+#  define uIntf                 jkbotti_uIntf
+#  define uLongf                jkbotti_uLongf
+#  define voidpf                jkbotti_voidpf
+#  define voidp                 jkbotti_voidp
 #endif
 
 #if defined(__MSDOS__) && !defined(MSDOS)
